--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
   "name": "andvit",
   "version": "1.0.0",
-  "description": "Proyecto AndVit, networking de técnicos para empresas.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PepeAndVit/andvit.git"
   },
-  "author": "Joseph Andrade Viteri",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/PepeAndVit/andvit/issues"
   },
   "homepage": "https://github.com/PepeAndVit/andvit#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/jsonwebtoken": "^8.5.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.2",
+    "morgan": "^1.10.0",
+    "typescript": "^4.2.3"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.4",
+    "@types/morgan": "^1.9.2",
+    "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7"
   }
 }
