--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -10,11 +10,19 @@ on:
     branches:
       - main
 
-env:
-    SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-    SLACK_USERNAME: ThisIsMyUsername # Optional. (defaults to webhook app)
-    SLACK_CHANNEL: general # Optional. (defaults to webhook)
-    SLACK_AVATAR: repository # Optional. can be (repository, sender, an URL) (defaults to webhook app avatar)
-  uses: Ilshidur/action-slack@2.0.2
-  with:
-    args: 'A new commit has been pushed.' # Optional
+jobs:
+  env:
+      SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      SLACK_USERNAME: GithubBot # Optional. (defaults to webhook app)
+      SLACK_CHANNEL: general # Optional. (defaults to webhook)
+      # SLACK_AVATAR: repository # Optional. can be (repository, sender, an URL) (defaults to webhook app avatar)
+    with:
+      args: 'A new commit has been pushed.' # Optional
+
+  steps:
+  - uses: Ilshidur/action-slack@2.0.2
+  - name: Send Slack Notification Push Main
+    env:
+    SLACK_COLOR: '#FFFF00'
+    SLACK_TITLE: 'Push Master'
+    SLACK_MESSAGE: 'Poner la hora, estatus'
