--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Message Push
       run: curl -H "Content-type: application/json" -X POST -d '{
            "channel": "#general", 
-           "text": "prueba desde \n github"
+           "text": "prueba desde \n github",
           }' ${{ secrets.SLACK_WEBHOOK }}
