--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -18,4 +18,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Message Push
-      run: curl -H "Content-type: application/json" -X POST -d { "channel": "#general", "text": "prueba desde \n github"} ${{ secrets.SLACK_WEBHOOK }}
+      run: curl -H "Content-type: application/json" -X POST -d "{channel: '#general', text: 'prueba desde \n github'}" ${{ secrets.SLACK_WEBHOOK }}
