--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -16,10 +16,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
     - name: Message Push
       run: |
       curl -H "Content-type: application/json" -X POST -d '{
-        channel: "#general", 
-        text: "prueba desde \n github"
+        "channel": "#general", 
+        "text": "prueba desde \n github"
       }' ${{ secrets.SLACK_WEBHOOK }}
