test curl from github

--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -16,6 +16,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Check out repository code
+      uses: actions/checkout@v2
     - name: Message Push
       run: |
       curl -H "Content-type: application/json" -X POST -d '{
