--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Message Push
         run: |
         curl -H "Content-type: application/json" -X POST -d '{
-          "channel": "#general", 
+          "channel": "\#general", 
           "text": "prueba desde \n github"
         }' ${{ secrets.SLACK_WEBHOOK }}
