--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -18,7 +18,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Message Push
         run: |
-        curl -H "Content-type: application/json" -X POST -d '{
-          "channel": "\#general", 
+        curl -H "Content-type: application/json" -X POST -d << EOF
+        {
+          "channel": "#general", 
           "text": "prueba desde \n github"
-        }' ${{ secrets.SLACK_WEBHOOK }}
+        } 
+        EOF
+        ${{ secrets.SLACK_WEBHOOK }}
