test curl from github

--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
         curl -H "Content-type: application/json" -X POST -d << EOF
         {
-          "channel": "#general", 
-          "text": "prueba desde \n github"
+          "text": "prueba desde \n github",
+          "channel": "#general"
         } 
         EOF
         ${{ secrets.SLACK_WEBHOOK }}
