--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -18,7 +18,4 @@ jobs:
         uses: actions/checkout@v2
       - name: Message Push
         run: |
-        curl -H "Content-type: application/json" -X POST -d '{
-          "text": "prueba desde \n github",
-          "channel": "#general"
-        }' ${{ secrets.SLACK_WEBHOOK }}
+          curl -H "Content-type: application/json" -X POST -d '{"text": "prueba desde \n github", "channel": "#general"}' ${{ secrets.SLACK_WEBHOOK }}
