--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -16,6 +16,11 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: Message Push
+      - name: Message Pull Request
+        if: github.event == 'pull_request'
         run: |
-          curl -H "Content-type: application/json" -X POST -d '{"text": "prueba desde \n github", "channel": "#general"}' ${{ secrets.SLACK_WEBHOOK }}
+          curl -H "Content-type: application/json" -X POST -d '{"channel": "#general", "title": "Pull Request", "text": "Esto es una pull request"}' ${{ secrets.SLACK_WEBHOOK }}
+      - name: Message Push
+        if: github.event == 'push'
+        run: |
+          curl -H "Content-type: application/json" -X POST -d '{"channel": "#general", "title": "Esto es un push", "text": "prueba desde \n github"}' ${{ secrets.SLACK_WEBHOOK }}
