test curl from github

--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Mostrar evento
-        run: echo github.event_name
+        run: echo ${{ github.event.issue.push }}
       - name: Message Pull Request
         if: github.event == 'pull_request'
         run: |
