--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Mostrar evento
-        run: echo ${{ github.event.issue.push }}
+        run: echo ${{ !github.event.issue.pull_request }}
       - name: Message Pull Request
-        if: github.event == 'pull_request'
+        if: ${{ github.event.issue.pull_request }}
         run: |
           curl -H "Content-type: application/json" -X POST -d '{"channel": "#general", "title": "Pull Request", "text": "Esto es una pull request"}' ${{ secrets.SLACK_WEBHOOK }}
       - name: Message Push
-        if: github.event == 'push'
+        if: ${{ !github.event.issue.pull_request }}
         run: |
           curl -H "Content-type: application/json" -X POST -d '{"channel": "#general", "title": "Esto es un push", "text": "prueba desde \n github"}' ${{ secrets.SLACK_WEBHOOK }}
