--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Mostrar evento
-        run: echo ${{ !github.event.issue.pull_request }}
+        run: echo ${{ github.event.issue.push }}
       - name: Message Pull Request
         if: ${{ github.event.issue.pull_request }}
         run: |
           curl -H "Content-type: application/json" -X POST -d '{"channel": "#general", "title": "Pull Request", "text": "Esto es una pull request"}' ${{ secrets.SLACK_WEBHOOK }}
       - name: Message Push
-        if: ${{ github.event.issue.push }}
+        if: ${{ !github.event.issue.pull_request }}
         run: |
           curl -H "Content-type: application/json" -X POST -d `{"channel": "#general","attachments" :[{"title": "Amsterdam Apigee Infra \n Prueba al hacer push","color" : "#F8FF3F","fields":[{"title" : "Description","value" : "Iria la descripción del action","short" : "true"},{"title" : "Priority/Ticket","value" : "Prueba del ticket","short" : "true"},{"title" : "Cause","value" : "El porque hago el action","short" : "true"},{"title" : "Solution","value" : "razón del despliegue", "short" : "true"}]}]}' ${{ secrets.SLACK_WEBHOOK }}
