--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -16,8 +16,6 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: Mostrar evento
-        run: echo ${{ github.event.issue.push }}
       - name: Message Pull Request
         if: ${{ github.event.issue.pull_request }}
         run: |
@@ -25,4 +23,4 @@ jobs:
       - name: Message Push
         if: ${{ !github.event.issue.pull_request }}
         run: |
-          curl -H "Content-type: application/json" -X POST -d '{"channel": "#general","attachments" :[{"title": "Amsterdam Apigee Infra \n Prueba al hacer push","color" : "#F8FF3F","fields":[{"title" : "Description","value" : "Iria la descripción del action","short" : "true"},{"title" : "Priority/Ticket","value" : "Prueba del ticket","short" : "true"},{"title" : "Cause","value" : "El porque hago el action","short" : "true"},{"title" : "Solution","value" : "razón del despliegue", "short" : "true"}]}]}' ${{ secrets.SLACK_WEBHOOK }}
+          curl -H "Content-type: application/json" -X POST -d '{"channel": "#inicio","attachments" :[{"title": "Amsterdam Apigee Infra \n\n","color" : "#F8FF3F","fields":[{"title" : "Description","value" : "Iria la descripción del action","short" : "true"},{"title" : "Priority/Ticket","value" : "Prueba del ticket","short" : "true"},{"title" : "Cause","value" : "El porque hago el action","short" : "true"},{"title" : "Solution","value" : "razón del despliegue", "short" : "true"}]}]}' ${{ secrets.SLACK_WEBHOOK }}
